--- a/Irish.html
+++ b/Irish.html
@@ -22,15 +22,13 @@
         </ul>
         <br/>
         <br/>
-        <textarea class="form-control" id="words">
-  
-        </textarea>
+        <textarea class="form-control" id="words"></textarea>
             <br/>
             <button onClick="submit()" class="btn btn-default">fhíorú</button>   
       </div>
       <script>
         function submit(){
-        $.post("http://192.168.0.103:5000/ir", {words:$("#words").val()}, function(result){
+        $.post("http://192.168.1.74:5000/ir", {words:$("#words").val()}, function(result){
                 $("#words").val(result)
       });
         }
