--- a/english (1).html
+++ b/english (1).html
@@ -23,17 +23,17 @@
         </ul>
         <br/>
         <br/>
-            <textarea class="form-control" id="tags">
-            </textarea>
+            <textarea class="form-control" id="tags"></textarea>
             <br/>
-            <button onClick="submit()" class="btn btn-default">Verify</button>   
+            
       </div>
       <script>
-        function submit(){
-        $.post("http://192.168.0.103:5000/en", {words:$("#words").val()}, function(result){
-                $("#words").val(result)
-      });
-        }
+          //<button onClick="submit()" class="btn btn-default">Verify</button>   
+    //     function submit(){
+    //     $.post("http://127.0.0.1:5000/en", {words:$("#tags").val()}, function(result){
+    //             $("#tags").val(result)
+    //   });
+    //     }
 
         $(document).ready(function() {
     console.log(words.length)
@@ -43,15 +43,13 @@
     }
     function extractLast( term ) {
         if(term.split(" ").pop()==""){
-            console.log(1)
             console.log(term)
             return term
          } 
-         return term.split(" ").pop();
-        
+         return term.split(" ").pop();       
     }
  
-    $( "#tags" )
+    $("#tags")
       .on( "change",
        function( event ) {
         if ( event.keyCode === $.ui.keyCode.TAB &&
@@ -74,7 +72,6 @@
                 return null;
             }
         });
-
           //var suggestions = $.ui.autocomplete.filter(availableTags, extractLast( request.term ))
           suggestions = (suggestions.length === 0 ? ["no suggestions found"] : suggestions.slice(0,5))
           response(suggestions.slice(0,5));
@@ -94,7 +91,15 @@
           return false;
         }
       });
-  } );
+  });
+
+  $("#tags").on('keydown',function(event){
+    if(event.keyCode == 32){
+        $.post("http://192.168.1.74:5000/en", {words:$("#tags").val()}, function(result){
+                $("#tags").val(result+ " ")
+      });
+    }
+  })
 
     </script>
 
