--- a/Irish.html
+++ b/Irish.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
-  <script type="text/javascript" src="./irishweb.js"></script>
+  <script type="text/javascript" src="./irishweb2.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -19,15 +19,16 @@
 </head>
 <body>
     <div class="container">
-        <h2>Spell Checker</h2>
+        <h1>Spell Checker</h1>
         <br/>
         <ul class="nav nav-pills">
           <li ><a href="english.html">English</a></li>
           <li class="active"><a href="Irish.html"> Irish </a></li>
         </ul>
         <br/>
+        <h2>Nóta: Cliceáil faoi dhó ar an bhfocal mícheart chun na moltaí a fháil</h2>
         <br/>
-            <textarea class="form-control" id="tags"></textarea>
+            <textarea class="form-control" id="tags" spellcheck="false" placeholder="clóscríobh anseo agus seiceáil le haghaidh aon bhotúin litrithe"></textarea>
             <br/>
             <br/>
             <br/>
@@ -110,7 +111,7 @@
 
       end = textarea.selectionEnd;
       sel = textarea.value.substring(start, end);
-      $.post("http://127.0.0.1:5000/ir", {words:sel}, function(result){//$("#tags").val()
+      $.post("http://192.168.1.89:5000/ir", {words:sel}, function(result){//$("#tags").val()
                 //$("#tags").val(result+ " ")
                 console.log(typeof(result))
                 words = JSON.parse(result)
@@ -118,6 +119,10 @@
                 $("#blist").show()
                 console.log(words)
             for(let i=0;i<words.length;++i){
+              if(words[0] ==' ' ){
+                $("#blist").hide()
+                break
+              }
               const option = new Option(words[i],words[i])
               sb.add(option)
       }
